# wd76util

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
apps/: CMakeLists.txt  tera8m.asm  tera8m.c  tera8m_sys.asm  wd76util.c
cmake/Compiler/: OpenWatcom-ASM.cmake
include/: dosapi.inc
include/wd76/: config.h.in  io_ports.h  lock_unlock.h  memory.h  memory_str.h  strings.h  util.h
src/: CMakeLists.txt  internal_wd76_set_memory_size_with_reboot.asm  lock_unlock.c  memory.c  memory_str.c  strings.c
